modal editing packages.


* Changes in Specialized Modes and Packages in Emacs 31.1

---
** ASM mode
*** 'asm-mode-set-comment-hook' is obsolete.
You can now set `asm-comment-char' from 'asm-mode-hook' instead.

---
** Ibuffer
*** New column 'recency' in Ibuffer display.
The variable 'ibuffer-formats' configures the Ibuffer formats.  Add
'recency' to the format to display the column.

*** New user option 'ibuffer-human-readable-size'.
When non-nil, buffer sizes are shown in human readable format.

** Smerge
*** New command 'smerge-extend' extends a conflict over surrounding lines.

** Image Dired

*** 'image-dired-show-all-from-dir' takes the same first argument as 'dired'.
This allows passing a string with wildcards, or a cons cell where the
first element is a list and the rest is a list of files.

** Browse URL

*** New user option 'browse-url-transform-alist'.
This user option is an alist that allows transforming URLs before asking
a web browser to load them.  For example, it could be used like this:

    (add-to-list 'browse-url-transform-alist
                 '("www.google.com" . "www.duckduckgo.com"))

*** New function 'browse-url-qutebrowser' for the Qutebrowser.
For better integration with the Qutebrowser, set
'browse-url(-secondary)-browser-function' to 'browse-url-qutebrowser'.

*** New GTK-native launch mode
For better Wayland support, the pgtk toolkit exposes a new
'x-gtk-launch-uri' browse-url handler and uses it by default when URLs
are browsed from a PGTK frame.  For other frames, we fall back to the
default URL launch function.  This change allows us to properly raise
browser windows under Wayland using the xdg_activation_v1 protocol.

*** Removed support for some obsolete web browsers.
Conkeror (obsolete since Emacs 28.1), gnome-moz-remote (obsolete since
Emacs 25.1), and gnudoit (obsolete since Emacs 25.1).

** CL-Lib

+++
*** 'cl-labels' now also accepts '(FUNC EXP)' bindings, like 'cl-flet'.